toolchain/chidori-core/src/sdk/snapshots/chidori_core__sdk__md__test__core1.snap
---
source: chidori-core/src/sdk/md.rs
expression: v
---
- Code:
    - name: ~
      language: PyO3
      source_code: x = 20
      function_invocation: ~
    - start: 3
      end: 17
- Code:
    - name: ~
      language: PyO3
      source_code: y = x * 20
      function_invocation: ~
    - start: 25
      end: 43
- Code:
    - name: ~
      language: Deno
      source_code: const zj = y + 20;
      function_invocation: ~
    - start: 51
      end: 81
