toolchain/chidori-core/src/sdk/snapshots/chidori_core__sdk__md__test__core3.snap
---
source: chidori-core/src/sdk/md.rs
expression: v
---
- Code:
    name: ~
    language: PyO3
    source_code: "def add_two(x):\n    return x + 2"
    function_invocation: ~
- Code:
    name: ~
    language: Deno
    source_code: "import { assertEquals } from \"https://deno.land/std@0.221.0/assert/mod.ts\";\n\nDeno.test(\"addition test\", () => {\n    assertEquals(add_two(2), 4);\n});"
    function_invocation: ~
- Code:
    name: ~
    language: Deno
    source_code: "function addTwo(x) {\n    return x + 2;\n}"
    function_invocation: ~
- Code:
    name: ~
    language: PyO3
    source_code: "import unittest\n\nclass TestMarshalledValues(unittest.TestCase):\n    def test_addTwo(self):\n        self.assertEqual(addTwo(2), 4)\n\nunittest.TextTestRunner().run(unittest.TestLoader().loadTestsFromTestCase(TestMarshalledValues))"
    function_invocation: ~
