toolchain/chidori-core/src/sdk/snapshots/chidori_core__sdk__md__test__core5.snap
---
source: chidori-core/src/sdk/md.rs
expression: v
---
- Code:
    name: run_prompt
    language: PyO3
    source_code: "def first_letter(s):\n    return s.replace(\"-\", \"\").strip()[0]\n\nasync def run_prompt(number_of_states):\n    out = \"\"\n    for state in (await get_states_first_letters(num=number_of_states)).split('\\n'):\n        out += first_letter(state)\n    return \"demo\" + out"
    function_invocation: ~
- Prompt:
    Chat:
      function_invocation: false
      configuration:
        import: ~
        fn: get_states_first_letters
        model: gpt-3.5-turbo
        frequency_penalty: ~
        max_tokens: ~
        presence_penalty: ~
        stop: ~
        temperature: ~
        logit_bias: ~
        user: ~
        seed: ~
        top_p: ~
      name: states
      provider: OpenAI
      req: "List the first {{num}} US states to be added to the union.\nReturn this as a `-` bulleted list with the name of the state on each line."
- Code:
    name: entry
    language: PyO3
    source_code: "import unittest\n\nclass TestMarshalledValues(unittest.IsolatedAsyncioTestCase):\n    async def test_run_prompt(self):\n        self.assertEqual(await run_prompt(5), \"demoAAAAA\")\n\nunittest.TextTestRunner().run(unittest.TestLoader().loadTestsFromTestCase(TestMarshalledValues))"
    function_invocation: ~
