toolchain/chidori-core/src/sdk/snapshots/chidori_core__sdk__md__test__core6.snap
---
source: chidori-core/src/sdk/md.rs
expression: v
---
- Code:
    name: math_fn
    language: PyO3
    source_code: "def add_two_numbers(a, b):\n      return a + b"
    function_invocation: ~
- Prompt:
    Chat:
      function_invocation: false
      configuration:
        import:
          - add_two_numbers
        fn: add_population
        model: gpt-3.5-turbo
        frequency_penalty: ~
        max_tokens: ~
        presence_penalty: ~
        stop: ~
        temperature: ~
        logit_bias: ~
        user: ~
        seed: ~
        top_p: ~
        eject: ~
      name: add_population
      provider: OpenAI
      req: "Add the population of {{state}} to the population of California"
- Code:
    name: entry
    language: PyO3
    source_code: "import unittest\n\nclass TestMarshalledValues(unittest.IsolatedAsyncioTestCase):\n    async def test_run_prompt(self):\n        self.assertEqual(await add_population(state=\"Arizona\"), 4)\n\nunittest.TextTestRunner().run(unittest.TestLoader().loadTestsFromTestCase(TestMarshalledValues))"
    function_invocation: ~
